Changed get_311 - removed "source" option: If filetype is given, import the csv. If none given, check cache. If data does not exist, call API. - Added functions to search cache/filter data - Save cache data as parquet file - Fleshed out get_311_api to working state   - correctly filters for dept & last_modified_date   - iterates requests for Socrata limit
Changed dependancies
- Switched from httr to httr2
- Removed full lubridate due to conflict

Added ce_columns to zzz.R to create standardized column name format

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,10 @@
 export(get_311)
 import(arrow)
 import(dplyr)
-import(httr)
+import(httr2)
 import(janitor)
-import(lubridate)
 import(rappdirs)
 import(readr)
 import(stringr)
+importFrom(lubridate,mdy_hms)
+importFrom(lubridate,ymd)
