Updated get_311 - removed "date" option, added "creation_date" and "last_modified_date" - data called from API is now added to cache - defined schema (in zzz.R) Defined global variables Added README & LICENSE Filled in DESCRIPTION

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ import(rappdirs)
 import(readr)
 import(stringr)
 importFrom(lubridate,mdy_hms)
-importFrom(lubridate,ymd)
+importFrom(lubridate,ymd_hms)
+importFrom(utils,globalVariables)
