Changed get_311 - Found link to download entire dataset that can be read by arrow - Removed option to upload file, added option to download entire dataset - Removed readr dependancy, added httr - changed "cache" parameter to "save cache" - added "use cache" option - Reorganized functions   - added add_missing_columns   - added filter_variables - Fixed issue where collection day was listed as double and not string Updated README

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,11 @@ RoxygenNote: 7.2.3
 Imports: 
     arrow,
     dplyr,
+    httr,
     httr2,
     janitor,
     lubridate,
     rappdirs,
-    readr,
     stringr
 URL: https://github.com/sj-io/memphis311
 BugReports: https://github.com/sj-io/memphis311/issues
