--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ import(dplyr)
 import(httr2)
 import(janitor)
 import(rappdirs)
-import(readr)
 import(stringr)
+importFrom(httr,GET)
+importFrom(httr,progress)
+importFrom(httr,write_disk)
 importFrom(lubridate,mdy_hms)
 importFrom(lubridate,ymd_hms)
 importFrom(utils,globalVariables)
