Overhauled get_311 to be more functional - parameters no longer explicitly declared, "..." passed on to query Removed cache options for now

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Imports:
     httr2,
     janitor,
     lubridate,
+    purrr,
     rappdirs,
     stringr
 URL: https://github.com/sj-io/memphis311
